# athenak_test_kernel

./: CMakeLists.txt  README.md
data/: nghbr_gid.txt  nghbr_lev.txt  sbuf_icoar.txt  sbuf_ifine.txt  sbuf_isame.txt
src/: data.hpp  main.cpp
src_simple/: main.cpp
